<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical|none"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageEdith"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/edith1"
                android:contentDescription="@string/picture"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textEdith"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:text="@string/ueber_edith"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edith_button"
                    android:textSize="15sp"
                    android:onClick="showEdithVita" />

            </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ueber_1"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ueber_2"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/esgoeButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_esgoe"
            android:onClick="showESGOEWebsite"
            android:contentDescription="@string/picture" />

        <ImageButton
            android:id="@+id/karmelButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_karmel" 
            android:onClick="showKarmelWebsite"
            android:contentDescription="@string/picture" />
        
        <ImageButton
            android:id="@+id/marienschwesternButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_marienschwestern"
            android:onClick="showMarienschwesternWebsite" 
            android:contentDescription="@string/picture" />
        
        <Button 
            android:id="@+id/facebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_button"
            android:onClick="showFacebook" />
        
        <Button 
            android:id="@+id/mailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_button"
            android:onClick="sendMail" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ueber_3" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ueber_4" />
        
        <Button
            android:id="@+id/pixelioButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="left|start"
            android:onClick="showPixelio"
            android:text="@string/pixelio"
            android:textAlignment="gravity"
            android:textSize="12sp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/programmer" />
        
    </LinearLayout>

</ScrollView>