<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/picture"
        android:scaleType="centerCrop"
        android:src="@drawable/default_poster" />

    <View
        android:id="@+id/centerView"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/centerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/picture" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/picture"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/gospel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/centerView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/ic_gospel"
        android:drawablePadding="5dp"
        android:text="@string/gospel" />

    <Button
        android:id="@+id/impulse"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/centerView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/ic_impulse"
        android:drawablePadding="5dp"
        android:text="@string/impulse" />

</RelativeLayout>